5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1836_1273.log
== TEST (2019-06-18 13:20:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

x1-x2=50
x2-x3=-120
x3+350
x1+x4=870

print(x1,x2,x3,x4)
-- ERROR:
File "XXXX", line 4
    x1-x2=50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:22:50) 
-- CODE:
from numpy import*
from numpy.linalg import*
x1=280
x2=230
x3=350
x1+x4=870

a1-a2=50
a2-a3=-120
a3=350
a1+a4=870
print(x1,x2,x3,x4)
-- ERROR:
File "XXXX", line 6
    x1+x4=870
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-18 13:23:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
x1=280
x2=230
x3=350
x1+x4=870

a1-a2=50
a2-a3=-120
a3=350
a1+a4=870
print(a1,a2,a3,a4)
-- ERROR:
File "XXXX", line 6
    x1+x4=870
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 11:25:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

saida= array([50,-120,350,870])
saida=saida.T

eq= array([
	[1,-1,0,0],
	[0,1,-1,0],
	[0,0,1,0],
	[1,0,0,1]
])

saida= dot(inv(eq),saida)

print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 11:25:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

saida= array([50,-120,350,870])
saida=saida.T

eq= array([
	[1,-1,0,0],
	[0,1,-1,0],
	[0,0,1,0],
	[1,0,0,1]
])

saida= dot(inv(eq),saida)

print(saida)
-- EXECUTION TIME:
0.923373
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
